    * Fix BugReportDialogView so the first text field has focus when it's opened.
    * Change the name of static constants in StubbedClientTestCase to make them more legible.
    * Convert unit tests for StandardRpcCaller to use StubbedClientTestCase.
    * Add Cucumber tests: lock/unlock users and RPC security (including new view and RPC)

Version 0.9.31   09 Oct 2013

    * Move up to CedarCommon v2.2.1.
    * Fix the CSS style for "text as link" to use the correct cursor.
    * Remove explicit use of Velocity classes in application code.

Version 0.9.30   27 Sep 2013

    * Move up to CedarCommon v2.2.0.
    * Use IGaeUserService.addClientRoles() rather than interacting with session directly.
    * Fix problems with initial RPC call timing out, using the new XSRF RPC timeout config hook.

Version 0.9.29   16 Sep 2013

    * Update dependencies to App Engine 1.8.4.
    * Updates to the Gradle build process.

Version 0.9.28   10 Sep 2013

    * Switched build system to Gradle using Maven for dependencies.
    * No functional changes, but this is a major structural change for developers.

Version 0.9.27   19 Aug 2013

    * Upgrade to App Engine 1.8.3.
    * Convert to new abstracted transaction mechanism for DAOs.
    * Add transactional version for most DAO methods.

Version 0.9.26   19 May 2013

    * Add a continue button on the bottom of the Account Locked page.

Version 0.9.25   08 May 2013

    * Add email address to admin-related audit events as well as the create user event.
    * Upgrade acceptance tests to use Capybara 2.x, which required only minor changes.
    * Completely revamp the RPC invocation mechanism using a new "Caller" pattern.
    * Handle double-call of retrieve method when a data table is first loaded.
    * Change the standard internal timestamp format to ISO 8601 (with literal "T")
    * Add timestamp to front of standard Mvp4g logger output.

Version 0.9.24   17 Apr 2013

    * Upgrade to Spring 3.2.2 and Spring Security 2.0.8.